# terrain

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cc
src/lib/: App.cc  App.hh  CMakeLists.txt
src/lib/app/: AppDesc.hh  AppDesc.hxx  CMakeLists.txt  ColorUtils.hh  ColorUtils.hxx  Controls.hh  Controls.hxx  PGEApp.cc  PGEApp.hh  PGEApp.hxx  TexturePack.cc  TexturePack.hh  olcEngine.cc  olcEngine.hh  olcPGEX_AdditionalColours.hh  olcPixelGameEngine.h
src/lib/coordinates/: CMakeLists.txt  CenteredViewport.hh  CenteredViewport.hxx  CoordinateFrame.cc  CoordinateFrame.hh  IsometricViewFrame.hh  IsometricViewFrame.hxx  TopLeftViewport.hh  TopLeftViewport.hxx  TopViewFrame.hh  TopViewFrame.hxx  TransformedViewFrame.cc  TransformedViewFrame.hh  Viewport.hh  Viewport.hxx
src/lib/game/: CMakeLists.txt  Game.cc  Game.hh  Game.hxx  GameState.cc  GameState.hh  SavedGames.cc  SavedGames.hh
src/lib/game/terrain/: CMakeLists.txt  ILattice.hh  InterpolationAlgorithm.hh  Interpolator.hh  Lattice.cc  Lattice.hh  Map.cc  Map.hh  Noise.cc  Noise.hh  NoiseGrid.cc  NoiseGrid.hh  Performance.hh  PositiveCyclicInteger.cc  PositiveCyclicInteger.hh  Terrain.cc  Terrain.hh  TerrainMode.cc  TerrainMode.hh  Type.cc  Type.hh
src/lib/game/terrain/area/: Area.hh  Area2dGenerator.cc  Area2dGenerator.hh  Area3dGenerator.cc  Area3dGenerator.hh  AreaGenerator.cc  AreaGenerator.hh  CMakeLists.txt  IAreaGenerator.hh  Range.cc  Range.hh
src/lib/game/terrain/generator/: AbstractCachedGenerator.hh  AbstractCachedGenerator.hxx  AbstractGradientGenerator.cc  AbstractGradientGenerator.hh  AbstractGradientGenerator.hxx  AbstractPeriodicGradientGenerator.cc  AbstractPeriodicGradientGenerator.hh  AbstractPeriodicGradientGenerator.hxx  CMakeLists.txt  GradientGenerator.cc  GradientGenerator.hh  GradientGenerator.hxx  IGradientGenerator.hh  IValueGenerator.hh  PeriodicGradientGenerator.cc  PeriodicGradientGenerator.hh  PeriodicGradientGenerator.hxx  PeriodicPerlinGenerator.cc  PeriodicPerlinGenerator.hh  PeriodicPerlinGenerator.hxx  ValueGenerator.cc  ValueGenerator.hh  ValueGenerator.hxx
src/lib/game/terrain/hasher/: CMakeLists.txt  Hasher.cc  Hasher.hh  Hasher.hxx  Hasher2d.cc  Hasher2d.hh  Hasher3d.cc  Hasher3d.hh  IHasher.hh
src/lib/game/terrain/interpolation/: AbstractInterpolator.hh  AbstractInterpolator.hxx  Algorithm.hh  Bilinear.cc  Bilinear.hh  Bilinear2d.cc  Bilinear2d.hh  Bilinear3d.cc  Bilinear3d.hh  CMakeLists.txt  ConstexprPowImpl.hh  IInterpolator.hh  InterpolationAxis.cc  InterpolationAxis.hh  InterpolationData.hh  InterpolationStrategy.cc  InterpolationStrategy.hh  Interpolator.cc  Interpolator.hh  SmoothStepInterpolationAxis.cc  SmoothStepInterpolationAxis.hh
src/lib/game/terrain/lattice/: AbstractGradientLattice.cc  AbstractGradientLattice.hh  AbstractLattice.cc  AbstractLattice.hh  AbstractLattice.hxx  AbstractLattice2d.hh  AbstractLattice2d.hxx  AbstractLattice3d.hh  AbstractLattice3d.hxx  AreaGenerator.cc  AreaGenerator.hh  CMakeLists.txt  GradientGenerator.cc  GradientGenerator.hh  GradientLattice.cc  GradientLattice.hh  Hasher.cc  IAreaGenerator.hh  IHasher.hh  ILattice.hh  ILatticeGenerator.hh  IValueGenerator.hh  Lattice.cc  Lattice.hh  LatticeGenerator.cc  LatticeGenerator.hh  LatticeType.cc  LatticeType.hh  PeriodicGradientLattice.cc  PeriodicGradientLattice.hh  PeriodicPerlinLattice.cc  PeriodicPerlinLattice.hh  ValueGenerator.cc  ValueGenerator.hh  ValueLattice.cc  ValueLattice.hh  ValueLattice.hxx
src/lib/game/terrain/lattice/generator/: AbstractGradientGenerator.cc  AbstractGradientGenerator.hh  CMakeLists.txt  GradientGenerator.cc  GradientGenerator.hh  PeriodicGradientGenerator.cc  PeriodicPerlinGenerator.cc  PeriodicPerlinGenerator.hh  ValueGenerator.cc  ValueGenerator.hh
src/lib/game/terrain/lattice/hasher/: Hasher.cc  Hasher.hh
src/lib/game/terrain/noise/: CMakeLists.txt  Hasher.cc  Hasher.hh  IHasher.hh  INoise.hh  Interpolator.cc  Noise.hh  Noise2d.cc  Noise2d.hh  Noise2dFactory.cc  Noise2dFactory.hh  NoiseGrid.hh  PeriodicNoise.cc  PeriodicNoise.hh  Seed.hh  Type.cc  Type.hh  ValueNoise.cc  ValueNoise.hh  WhiteNoise.cc  WhiteNoise.hh
src/lib/game/terrain/point/: ILatticePoint.hh  IPoint.hh
src/lib/ui/: Action.cc  Action.hh  BackgroundDesc.cc  BackgroundDesc.hh  CMakeLists.txt  Menu.cc  Menu.hh  Menu.hxx  MenuContentDesc.cc  MenuContentDesc.hh
tests/: CMakeLists.txt  main.cc
tests/unit/: CMakeLists.txt
tests/unit/lib/: CMakeLists.txt
tests/unit/lib/app/: CMakeLists.txt  ControlsTest.cc
tests/unit/lib/common/: CMakeLists.txt  PointName.hh  PointName.hxx  SanitizeTestName.cc  SanitizeTestName.hh  TestName.hh  TestName.hxx
tests/unit/lib/coordinates/: CMakeLists.txt  CenteredViewportTest.cc  CommonCoordinateFrame.cc  CommonCoordinateFrame.hh  CommonViewport.cc  CommonViewport.hh  IsometricViewFrameTest.cc  TopLeftViewportTest.cc  TopViewFrameTest.cc
tests/unit/lib/game/: CMakeLists.txt
tests/unit/lib/game/terrain/: CMakeLists.txt  PositiveCyclicIntegerTest.cc
tests/unit/lib/game/terrain/area/: Area2dGeneratorTest.cc  Area3dGeneratorTest.cc  AreaGeneratorTest.cc  CMakeLists.txt
tests/unit/lib/game/terrain/generator/: CMakeLists.txt  GradientGenerator2dTest.cc  GradientGeneratorTest.cc  IValueGeneratorPreparer.hh  PeriodicGradientGenerator2dTest.cc  PeriodicGradientGeneratorTest.cc  PeriodicPerlinGenerator2dTest.cc  PeriodicPerlinGeneratorTest.cc  ValueGenerator2dTest.cc  ValueGeneratorTest.cc
tests/unit/lib/game/terrain/hasher/: CMakeLists.txt  HasherTest.cc  MockHasher.hh
tests/unit/lib/game/terrain/interpolation/: Bilinear2dTest.cc  Bilinear3dTest.cc  BilinearTest.cc  CMakeLists.txt  ConstexprPowImplTest.cc  InterpolationAxisTest.cc  MockInterpolator.cc  MockInterpolator.hh  MockInterpolator.hxx
tests/unit/lib/game/terrain/lattice/: AreaGeneratorTest.cc  CMakeLists.txt  GradientGeneratorTest.cc  GradientLattice2dTest.cc  GradientLatticeTest.cc  HasherMock.hh  ILatticePreparer.hh  IPeriodicLatticePreparer.hh  (+16 more)
(+11 files in other folders)
